fixes to header and dark mode toggle

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,11 +4,9 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-html,
-body {
-  transition: background-color 0.5s ease, color 0.5s ease;
+html {
+  transition: none; /* prevent double paint */
 }
-
 img,
 svg {
   transition: filter 0.3s ease;
@@ -16,7 +14,7 @@ svg {
 
 /* Base Styles */
 body {
-  @apply font-serif m-8 md:m-12 flex flex-col gap-24 transition-colors duration-500;
+  @apply font-serif p-8 md:p-12 flex flex-col gap-24 transition-colors duration-[1000ms];
   background-color: var(--bg);
   color: var(--fg);
 }
@@ -49,7 +47,7 @@ main {
   /* Light mode defaults */
   --bg: #ffffff;
   --fg: #111111;
-  --muted: #666666;
+  --muted: #333;
   --accent: #0077ff;
   --accent-2: #ffb400;
   --accent-3: #00c896;
